# broken-latch

./: .gitignore  HOW_TO_USE_TASKS.md  TASK_03_COMPLETE.md  build-dll.sh  champ-select.html  end-game.html  in-lobby.html  index.html  ingame-cooldowns.html  ingame-kda.html  ingame-overlay.html  ingame-timer.html  launching.html  loading.html  overlay.html  package.json  tsconfig.json  vite.config.ts
broken-latch-tasks-prompts/: 01-project-setup.md  02-core-overlay-window.md  03-directx-hook-dll.md  04-game-lifecycle-detector.md  05-hotkey-manager.md  06-widget-window-system.md  07-app-lifecycle-manager.md  08-http-api-server.md  09-javascript-sdk.md  10-platform-ui.md  11-app-distribution-system.md  12-sdk-documentation.md  13-developer-cli.md  README.md
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: build.rs  dev.rs  mod.rs  new.rs  package.rs  publish.rs  validate.rs
cli/src/utils/: manifest.rs
docs/: Hunter Mode GPT Build Prompt.md  Hunter Mode On.md  Hunter Mode Product Prompt.md  README.md  TASK_01_COMPLETE.md  WhatsApp Platform Prompt.md  index.md
docs/.vitepress/: config.ts
docs/api/: game-lifecycle.md  hotkeys.md  index.md  initialization.md  messaging.md  notifications.md  platform.md  storage.md  windows.md
docs/examples/: hotkey-toggle.md  minimal-widget.md  multi-panel-app.md  webhook-backend.md
docs/getting-started/: installation.md  local-development.md  manifest.md  your-first-app.md
docs/guides/: backend-integration.md  building-a-widget.md  debugging.md  game-phase-tracking.md  permissions.md  persistent-storage.md
docs/reference/: game-phases.md  manifest-schema.md  permissions.md  typescript-types.md
hunter-mode-tasks-prompts/: 01-project-setup.md  02-backend-riot-api-client.md  03-backend-caching-system.md  04-backend-enemy-profiles-feature.md  05-backend-win-condition-feature.md  06-backend-hunter-focus-feature.md  07-backend-postgame-feature.md  08-frontend-platform-integration.md  09-frontend-shared-components.md  10-frontend-loading-panel.md  11-15-final-frontend-tasks.md  PROGRESS.md  README.md
overlay-hook/: CMakeLists.txt  README.md
overlay-hook/src/: dllmain.cpp  dx11_hook.cpp  dx12_hook.cpp  dx_hook.cpp  hook.h  pipe.cpp  render.cpp
sdk/: package-lock.json  package.json  rollup.config.js  tsconfig.json
sdk/src/: core.ts  game.ts  hotkeys.ts  messaging.ts  notifications.ts  platform.ts  storage.ts  types.ts  windows.ts
src/: App.tsx  index.css  overlay.html  overlay.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  overlay.json  phase-windows.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/resources/: phases.json
src-tauri/src/: config.rs  db.rs  hotkey.rs  http_api.rs  main.rs  phase_manager.rs  sdk_server.rs  tray.rs  widgets.rs
src-tauri/src/apps/: loader.rs  mod.rs  platform_updater.rs  registry.rs  sandbox.rs  updater.rs
src-tauri/src/game/: detect.rs  focus.rs  lcu.rs  mod.rs  session.rs
src-tauri/src/hook/: injector.rs  mod.rs  pipe.rs
src-tauri/src/overlay/: mod.rs  region.rs  window.rs
src-tauri/tests/: overlay_test.rs
src/components/AppBrowser/: AppBrowser.tsx  AppDetails.tsx  AppTile.tsx
src/components/AppManager/: AppCard.tsx  AppManager.tsx
src/components/DevDashboard/: DevDashboard.css  DevDashboard.tsx
src/components/Settings/: DeveloperSettings.tsx  GeneralSettings.tsx  OverlaySettings.tsx  PerformanceSettings.tsx  Settings.tsx
src/phase-windows/: champ-select.tsx  end-game.tsx  in-lobby.tsx  ingame-cooldowns.tsx  ingame-kda.tsx  ingame-overlay.tsx  ingame-timer.tsx  launching.tsx  loading.tsx
src/platform/: OverlayFrame.tsx  overlay-frame.css
(+13 files in other folders)
