[package]
name = "broken-latch"
version = "0.1.0"
description = "Game overlay platform"
authors = ["broken-latch team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
sysinfo = "0.30"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
zip = "2.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors", "trace"] }
rfd = "0.14"
sha2 = "0.10"
semver = "1.0"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
